<resources>
    <string name="app_name" translatable="false">Smart Window</string>

    <!--날씨정보-->
    <string name="weatherinfo_title">Weather info</string>
    <string name="weatherinfo_weather">기상청 날씨 정보</string>
    <string name="weatherinfo_sensor">센서 날씨 정보</string>

    <!--리모컨-->

    <string name="remote_controller_title">Remote Controller</string>
    <string name="remote_controller_onoff">ON / OFF</string>
    <string name="remote_controller_open">open</string>
    <string name="remote_controller_close">close</string>
    <string name="remote_controller_textview_text1">현재 상태</string>


    <string name="change_city">Change city</string>

    <!-- Put your own APP ID here -->
    <string name="open_weather_maps_app_id">9f168a26e28ce7070474c22388ed8145</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="place_not_found">날씨 데이터를 찾지 못하였습니다.</string>
    <string name="weathera">기\n상\n청</string>

    <string name="humidity">습도</string>
    <string name="temperature">온도</string>
    <string name="pressure">기압</string>
    <string name="temp_max">최고온도</string>
    <string name="temp_min">최저온도</string>
    <string name="wind">바람</string>
</resources>
